@@ -117,7 +117,7 @@ namespace Giver
 			//Logger.Debug("RECEIVE: Preparing Notification");
 			try {
 				// place this request into the pending requests and notify the user of the request
-				string summary = String.Format(Catalog.GetString("{0} wants to \"Give\""), sd.userName);
+				string summary = String.Format(Catalog.GetString("{0} wants to give"), sd.userName);
 				string body;
 				if(sd.count == 1)
 					body = String.Format(Catalog.GetString("{0}\nSize: {1} bytes"), sd.name, sd.size);
@@ -352,6 +352,21 @@ namespace Giver
 					lock(sessionLocker) {
 						sessions.Remove(sessionID);
 					}
+
+					//Logger.Debug("RECEIVE: About to do a Gtk.Application.Invoke for the notify dude.");
+					Gtk.Application.Invoke( delegate {
+						string summary = String.Format(Catalog.GetString("{0} is done giving"), sd.userName);
+						string body = String.Format(Catalog.GetString("You have received all of the sent files"));
+
+						//Logger.Debug("RECEIVE: Inside the Gtk.Application.Invoke dude");
+						Notification notify = new Notification(	summary, 
+																body,
+																Utilities.GetIcon ("giver-48", 48));
+
+						currentNotification = notify;
+						Application.ShowAppNotification(notify);
+						Gnome.Sound.Play(Path.Combine(Giver.Defines.SoundDir, "notify.wav"));
+					} );
 				}
 		
 			} catch (Exception e) {
